[package]
name = "gre"
version = "0.1.0"
authors = ["Gaëtan Renaudeau <renaudeau.gaetan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gre"
path = "src/lib.rs"

[dependencies]
lyon = "0.17"
travelling_salesman = "1.0"
voronoi = "0.1"
time = "0.3"
geo = "0.23"
geo-types = "0.7"
num-traits = "0.2"
svg = "0.13"
image = "0.23"
rand = "0.5.6"
kiss3d = "0.35"
noise = "0.7"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
rkm = "0.8"
ndarray = "0.12.1"
instant = "0.1"
clap = { version = "3.2", features = ["derive"] }
byteorder = "1"
soy = "0.2"
contour = "0.4"
geojson = "0.22"
num-bigint = "0.4"
num-integer = "0.1"
livedraw = "0.3"
audioviz = "0.5"
stl = "0.2"
chull = "0.2"
geo-booleanop = "0.3"
isosurface = "0.0"
svg2polylines = "0.8"