[package]
name = "greweb"
version = "0.1.0"
authors = ["greweb <greweb@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
rand = "0.8"
bs58 = "0.5"
fontdue = "0.8"
noise = "0.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
